<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login_here"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="username"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="password"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        app:icon="@drawable/ic_android_black_24dp"
        android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:onClick="goToSignUpActivity"/>
    </LinearLayout>
